CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.0

 Release Details:
  49:
   filesystem caching in Aggregation, PointCOllection
   DateUnit refactor - use udunit.convert() instead of TimeUnit as base time
   udunits numeric timezone bug
  48:
   WRF Conventions looks for GRIDTYPE if it cant find DYN_OPT
   improve M3IO CoordSysBuilder, from Qun He
   Stereographic Projection, from the "natural origin" and the tangent point, calculating the scale factor.
   ToolsUI: Viewer: compare two files, global attributes table
   ToolsUI: NcML Aggregation tab: check for homogeneity.
   AggFmrc: ragged, set missing values to NaN
   DConnect2: allowSessions now defaults to true, so "X-Accept-Session: true" header is sent
     (can use ucar.nc2.dods.DODSNetcdfFile.setAllowSessions() to change)
  47:
   NcMLReader.merge -> mergeNcML : create new Dataset
   setValues.setValues (NcmlReader) : scalar Array need to be reshaped
   new IOSP:  ucar.nc2.iosp.mcidas.McIDASGridServiceProvider
   CF1Convention.getZisPositive() - use in WriterCFPointObsDataset
   atmosphere_hybrid_sigma_pressure_coordinate: ap(z) + b(z)*surfacePressure(x,y)
  46:
   udunit fixes for logarithmic units
   StructurePsuedo: bug in _read(section), returning wrong ArrayStructure.getShape().
   PointTable: refactor and document, esp for CF
   Structure.select(), StructurePseudo() : use member names, not Variable object
   NetcdfWriteable: check for valid DataType, improve error messages. was allowing addVariable(.., DataType.STRING)
     causing invalid vsize. netcdf-java read ok, c library doesnt.
   NcML: logical view (not done)
   NCMLReader: allow use of alternate CrawlableDataset impls in NcML aggregation.
   LambertConformal: crossSeam() true when distance > 20,000.
   ProjectionImpl.latLonToProjBB: dont check crosssSeam()
   ProjectionImpl: now create a new object when needed in latlonToProj(), projToLatlon() - too susceptible to error otherwise.